# tpo-lab1

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
1-arcsin/: CMakeLists.txt
1-arcsin/src/: arcsin.cpp  arcsin.hpp  main.cpp
1-arcsin/test/: arcsin_test.cpp  arcsin_test.hpp
2-bubble-sort/: CMakeLists.txt
2-bubble-sort/src/: bubble_sort.cpp  bubble_sort.hpp  main.cpp
2-bubble-sort/test/: bubblesort_test.cpp
3-text/: CMakeLists.txt
3-text/src/: abstracts.cpp  abstracts.hpp  entity.cpp  entity.hpp  land.cpp  land.hpp  main.cpp
3-text/test/: entity_test.cpp  land_test.cpp
src/: arcsin.cpp  main.cpp
test/: arcsin_test.cpp  arcsin_test.hpp  test_main.cpp
